projects/services/springboot-hello-service/k8s/hello-world.route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sb-hello-route
  namespace: saas-app
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: ingress
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: springboot-hello-service
      namespace: saas-app
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /sb-hello
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /api/v1/hello
